# easy-sdm

./: .gitignore  LICENSE  Makefile  README.md  dockerfile  dockerfile_jupyter.Dockerfile  mock_data.dvc  pyproject.toml  setup.py  todo  wheels.dvc
.dvc/: config
docker/: dockerfil_base  dockerfile_poetry.Dockerfile  dockerfile_python  dockerfile_wheel
easy_sdm/: api.py  base.py  configs.py  console.py  debug_console.py  eda_console.py  params.yaml
easy_sdm/download/: __init__.py  download_job.py
easy_sdm/eda/: __init__.py  exploratory_data_analyses_job.py
easy_sdm/enums/: __init__.py  estimator_type.py  modelling_type.py  pseudo_species_generators.py  raster_source.py
easy_sdm/environment/: __init__.py  environment_creation_job.py
easy_sdm/featuarizer/: __init__.py  dataset_creation_job.py
easy_sdm/ml/: __init__.py  prediction_job.py  train_job.py
easy_sdm/raster_processing/: __init__.py  raster_processing_job.py
easy_sdm/species_collection/: __init__.py  species_colection_job.py
easy_sdm/typos/: __init__.py  species.py
easy_sdm/utils/: __init__.py  coordinates_utils.py  data_loader.py  debug_utils.py  file_utils.py  logger.py  path_utils.py  raster_utils.py
easy_sdm/visualization/: __init__.py  debug_plots.py  visualization_job.py
scripts/configuration_scripts/: unzip_rasters.sh
scripts/console_scripts/: collect_milpa_data.sh  collect_species_data.sh  standarize_rasters.sh
tests/: conftest.py  test_console.py
tests/test_download/: test_download_job.py
tests/test_environment/: test_environment_creation_job.py
(+60 files in other folders)
