[tool.poetry]
name = "easy_sdm"
version = "0.1.0"
description = ""
authors = ["Matheus Gustavo Alves Sasso <m158257@dac.unicamp.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.8"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
numpy = "^1.21.4"
requests = "^2.26.0"
plotly = "^5.4.0"
geopandas = "^0.10.2"
pygbif = "^0.6.0"
rasterio = "^1.2.10"
natsort = "^8.0.2"
PyYAML = "^6.0"
typer = "^0.4.0"
fastapi = "^0.70.1"
Fiona = "^1.8.20"
python-json-logger = "^2.0.2"
Rtree = "^0.9.7"
pyproj = "^3.3.0"
Shapely = "^1.8.0"
OWSLib = "^0.25.0"
mlflow = "^1.23.1"
pytorch-tabnet = "^3.1.1"
statsmodels = "^0.13.2"
optuna = "^2.10.0"
scipy = "^1.8.0"
xgboost = "^1.6.0"

[tool.poetry.scripts]
easy_sdm = "easy_sdm.console:app"

[tool.poetry.dev-dependencies]
bumpver = "^2021.1113"
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
radon = "4.5.2"
pre-commit = "^2.14.0"
black = {version = "^21.7b0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
